[metadata]
name = wmt_cl
author = Eric Hutton
author-email = eric.hutton@colorado.edu
summary = Command-line tools for the WMT
description-file = README.md
home-page = https://github.com/csdms/wmt-cl

[files]
packages =
  wmt_cl

[entry_points]
console_scripts =
  wmt = wmt_cl.cmd.wmt:main

[pbr]
autodoc_tree_modules = True
autodoc_index_modules = True
